--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -32,6 +32,15 @@ jobs:
         uses: codelytv/pr-size-labeler@4ec67706cd878fbc1c8db0a5dcd28b6bb412e85a # v1.10.3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          xs_label: 'size/xs'
+          xs_max_size: 10
+          s_label: 'size/s'
+          s_max_size: 100
+          m_label: 'size/m'
+          m_max_size: 500
+          l_label: 'size/l'
+          l_max_size: 1000
+          xl_label: 'size/xl'
 
       - name: Apply conventional labels
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
