--- a/.github/workflows/config-deployment.yml
+++ b/.github/workflows/config-deployment.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment template to prioritise'
+        description: 'Environment template to prioritize'
         required: false
         default: ''
         type: string
@@ -59,11 +59,8 @@ jobs:
       REQUESTED_ENVIRONMENT: ${{ github.event.inputs.environment || '' }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Prepare Python toolchain
-        uses: ./.github/actions/setup-environment
+      - name: Prepare workspace
+        uses: ./.github/actions/checkout-and-setup
         with:
           python-version: '3.12'
 
