--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,11 +31,8 @@ jobs:
     name: Validate docs
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Setup Python environment
-        uses: ./.github/actions/setup-environment
+      - name: Prepare workspace
+        uses: ./.github/actions/checkout-and-setup
         with:
           python-version: "3.12"
           cache-suffix: "-docs"
