--- a/.github/workflows/test-composite-actions.yml
+++ b/.github/workflows/test-composite-actions.yml
@@ -12,6 +12,29 @@ permissions:
   contents: read
 
 jobs:
+  checkout-and-setup:
+    name: Checkout and setup composite
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Execute composite
+        id: prep
+        uses: ./.github/actions/checkout-and-setup
+        with:
+          python-version: '3.12'
+
+      - name: Validate workspace
+        shell: bash
+        run: |
+          set -euo pipefail
+          if [ ! -f pyproject.toml ]; then
+            echo "Repository checkout failed" >&2
+            exit 1
+          fi
+
+          echo "Cache hit: ${{ steps.prep.outputs.cache-hit }}"
+          uv run python -c "import sys; print(sys.version)"
+
   setup-environment:
     name: Setup environment action
     runs-on: ubuntu-latest
@@ -48,11 +71,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-
-      - name: Prepare Python toolchain
-        uses: ./.github/actions/setup-environment
+      - name: Prepare workspace
+        uses: ./.github/actions/checkout-and-setup
         with:
           python-version: '3.12'
 
