--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "uvicorn[standard]>=0.36.0,<1.0.0",
     "python-multipart>=0.0.20,<0.1.0",
     # Data validation & configuration
-    "pydantic>=2.11.9,<3.0.0",          # browser-use 0.2.6 compatibility
+    "pydantic>=2.11.9,<3.0.0", # browser-use 0.2.6 compatibility
     "pydantic-settings>=2.10.1,<3.0.0",
     "python-dotenv>=1.1.1,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
@@ -82,7 +82,7 @@ dependencies = [
     # Monitoring & observability
     "prometheus-client>=0.23.1,<0.24.0",
     "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
-    "psutil>=6.1.1,<7.0.0",                            # Capped for taskipy compatibility (crawl4ai now requires >=6.1.1)
+    "psutil>=6.1.1,<7.0.0", # Capped for taskipy compatibility (crawl4ai now requires >=6.1.1)
     # Database & ORM
     "sqlalchemy>=2.0.43,<3.0.0",
     # Utility libraries
@@ -104,6 +104,8 @@ dependencies = [
     "pydeps>=3.0.1",
     "pydantic-ai>=0.2.20,<0.3.0",
     "scikit-learn>=1.7.2,<2.0.0",
+    "langchain-openai>=0.3.33,<1.0.0",
+    "langchain-core>=0.3.76",
 ]
 
 [project.optional-dependencies]
@@ -161,7 +163,6 @@ browser = ["playwright>=1.55.0,<2.0.0"]
 
 # LLM integrations (core AI functionality)
 llm = [
-    "langchain-openai>=0.3.33,<1.0.0",
     "langchain-anthropic>=0.3.20,<1.0.0",
     "langchain-google-genai>=2.1.12,<3.0.0",
 ]
