--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,11 +99,22 @@ jobs:
         run: uv run pyright
 
   tests:
-    name: Test suite
+    name: Test suite (${{ matrix.profile }})
     runs-on: ubuntu-latest
     needs:
       - changes
       - lint
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - profile: simple
+            pytest_profile: ci
+            allow_failure: false
+          - profile: enterprise
+            pytest_profile: quick
+            allow_failure: true
+    continue-on-error: ${{ matrix.allow_failure }}
     if: >-
       always() &&
       (needs.lint.result == 'success' || needs.lint.result == 'skipped') &&
@@ -115,6 +126,9 @@ jobs:
         needs.changes.outputs.config == 'true' ||
         needs.changes.outputs.dependencies == 'true'
       )
+    env:
+      PYTEST_BENCHMARK_DISABLE: "1"
+      AI_DOCS_MODE: ${{ matrix.profile }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
@@ -131,19 +145,19 @@ jobs:
           mkdir -p logs cache data
 
       - name: Run test suite
-        run: uv run python scripts/dev.py test --profile ci
+        run: uv run python scripts/dev.py test --profile ${{ matrix.pytest_profile }}
 
       - name: Upload coverage artifact
-        if: always()
+        if: matrix.profile == 'simple'
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          name: coverage-xml
+          name: coverage-xml-${{ matrix.profile }}
           path: coverage.xml
           if-no-files-found: ignore
           retention-days: 7
 
       - name: Upload to Codecov
-        if: success() && github.repository_owner != 'dependabot'
+        if: matrix.profile == 'simple' && success() && github.repository_owner != 'dependabot'
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
         with:
           files: coverage.xml
