--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,8 +104,10 @@ dependencies = [
     "pydeps>=3.0.1",
     "pydantic-ai>=0.2.20,<0.3.0",
     "scikit-learn>=1.7.2,<2.0.0",
+    "langchain>=0.3.12,<0.4.0",
     "langchain-openai>=0.3.33,<1.0.0",
     "langchain-core>=0.3.76",
+    "langchain-community>=0.3.12,<0.4.0",
 ]
 
 [project.optional-dependencies]
