--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,7 @@ dependencies = [
     "langchain-openai>=0.3.33,<1.0.0",
     "langchain-core>=0.3.76",
     "langchain-community>=0.3.12,<0.4.0",
+    "langchain-qdrant>=0.2.0,<0.4.0",
 ]
 
 [project.optional-dependencies]
