--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ dependencies = [
     "langchain-core>=0.3.76",
     "langchain-community>=0.3.12,<0.4.0",
     "langchain-qdrant>=0.2.0,<0.4.0",
+    "langgraph>=0.6.0,<0.7.0",
 ]
 
 [project.optional-dependencies]
