--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,6 +110,7 @@ dependencies = [
     "langchain-community>=0.3.12,<0.4.0",
     "langchain-qdrant>=0.2.0,<0.4.0",
     "langchain-mcp-adapters>=0.1.10,<0.2.0",
+    "ragas>=0.1.10,<0.2.0",
     "playwright>=1.55.0,<2.0.0",
     "rebrowser-playwright>=1.47.0,<2.0.0",
     "tf_playwright_stealth>=1.2.0,<2.0.0",
