--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dependencies = [
     # MCP framework
     "mcp>=1.14.1,<2.0.0",
     "fastmcp>=2.12.3,<3.0.0",
-    # Caching & task queue
+    # Caching utilities
     "redis[hiredis]>=5.3.1,<6.0.0",
     "arq>=0.26.3,<0.27.0",
     "cachetools>=5.5.2,<6.0.0",
@@ -232,7 +232,6 @@ Issues = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/issues"
 ai-docs = "src.cli.main:main"
 manage-db = "src.manage_vector_db:main"
 mcp-server = "src.unified_mcp_server:main"
-task-worker = "src.cli_worker:main"
 
 [build-system]
 requires = ["hatchling>=1.25.0"]
@@ -416,7 +415,6 @@ markers = [
     "rate_limit: mark test as rate limit test",
     "respx: mark test as using respx HTTP mocking",
     "rich: mark test as requiring Rich console features",
-    "security: mark test as security test",
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "spike: mark test as spike test",
     "stress: mark test as stress test",
