--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,58 +34,44 @@ classifiers = [
 ]
 
 dependencies = [
-    # Core web framework & API
     "fastapi[standard]>=0.117.1,<0.118.0",
     "starlette>=0.48.0,<0.49.0",
     "uvicorn[standard]>=0.36.0,<1.0.0",
     "python-multipart>=0.0.20,<0.1.0",
-    # Data validation & configuration
-    "pydantic>=2.11.9,<3.0.0", # browser-use 0.2.6 compatibility
+    "pydantic>=2.11.9,<3.0.0",
     "pydantic-settings>=2.10.1,<3.0.0",
     "python-dotenv>=1.1.1,<2.0.0",
     "pyyaml>=6.0.2,<7.0.0",
-    # Core web scraping
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl-py>=4.3.6,<5.0.0",
-    # Vector database & embeddings
     "qdrant-client[fastembed]>=1.15.1,<1.15.2",
     "openai>=1.108.1,<2.0.0",
     "fastembed>=0.7.3,<0.7.4",
     "FlagEmbedding>=1.3.5,<2.0.0",
-    # Data processing & ML
     "numpy>=1.24,<2.4",
     "scipy>=1.16.2,<2.0.0",
     "defusedxml>=0.7.1,<0.8.0",
-    # HTTP & async
     "aiohttp>=3.12.15,<4.0.0",
     "asyncio-throttle>=1.0.2,<2.0.0",
     "aiofiles>=24.1.0,<25.0.0",
-    # Circuit breaker & retry patterns
     "tenacity>=9.1.2,<10.0.0",
-    # MCP framework
     "mcp>=1.14.1,<2.0.0",
     "fastmcp>=2.12.3,<3.0.0",
-    # Caching utilities
     "redis[hiredis]>=5.3.1,<6.0.0",
     "arq>=0.26.3,<0.27.0",
     "cachetools>=5.5.2,<6.0.0",
-    # Modern libraries for optimization
     "slowapi>=0.1.9,<0.2.0",
     "purgatory-circuitbreaker>=0.7.2,<0.8.0",
     "aiocache>=0.12.3,<0.13.0",
-    # CLI & user interface
     "click>=8.2.1,<8.2.2",
     "rich>=14.1.0,<15.0.0",
     "colorlog>=6.9.0,<7.0.0",
     "tqdm>=4.67.1,<5.0.0",
     "questionary>=2.1.1,<3.0.0",
-    # Monitoring & observability
     "prometheus-client>=0.23.1,<0.24.0",
     "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
-    "psutil>=6.1.1,<7.0.0", # Capped for taskipy compatibility (crawl4ai now requires >=6.1.1)
-    # Database & ORM
+    "psutil>=6.1.1,<7.0.0",
     "sqlalchemy>=2.0.43,<3.0.0",
-    # Utility libraries
     "tomli-w>=1.2.0,<2.0.0",
     "jsonschema2md>=1.7.0,<2.0.0",
     "opentelemetry-api>=1.37.0,<2.0.0",
@@ -95,29 +81,26 @@ dependencies = [
     "tool>=0.8.0",
     "httpx>=0.28.1,<0.29.0",
     "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59.0",
-    # Development and utility tools
-    "ruff>=0.13.1,<0.14.0",
-    "pylint>=3.3.8,<4.0.0",
-    "pyright>=1.1.379,<2.0.0",
-    "taskipy>=1.14.1,<2.0.0",
     "dependency-injector>=4.48.2",
     "pydeps>=3.0.1",
     "pydantic-ai>=0.2.20,<0.3.0",
     "scikit-learn>=1.7.2,<2.0.0",
     "langchain>=0.3.12,<0.4.0",
-    "langchain-openai>=0.3.33,<1.0.0",
     "langchain-core>=0.3.76",
     "langchain-community>=0.3.12,<0.4.0",
     "langchain-qdrant>=0.2.0,<0.4.0",
     "langchain-mcp-adapters>=0.1.10,<0.2.0",
-    "ragas>=0.1.10,<0.2.0",
-    "playwright>=1.55.0,<2.0.0",
-    "rebrowser-playwright>=1.47.0,<2.0.0",
-    "tf_playwright_stealth>=1.2.0,<2.0.0",
     "langgraph>=0.6.0,<0.7.0",
 ]
 
+
 [project.optional-dependencies]
+eval = [
+    "ragas==0.1.13",
+    "langchain-openai>=0.3.33,<1.0.0",
+    "datasets>=2.18.0,<3.0.0",
+]
+
 # Development dependencies
 dev = [
     "pytest>=8.4.2,<9.0.0",
@@ -135,6 +118,7 @@ dev = [
     "ruff>=0.13.1,<0.14.0",
     "pylint>=3.3.8,<4.0.0",
     "pyright>=1.1.379,<2.0.0",
+    "taskipy>=1.14.1,<2.0.0",
     "locust>=2.37.10,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
 ]
@@ -220,7 +204,7 @@ gpu = [
 
 # All optional dependencies
 all = [
-    "ai-docs-vector-db-hybrid-scraper[dev,contract,accessibility,browser,llm,observability,parsing,dataframe,docs,gpu]",
+    "ai-docs-vector-db-hybrid-scraper[dev,contract,accessibility,browser,llm,observability,parsing,dataframe,docs,gpu,eval]",
 ]
 
 [project.urls]
@@ -471,31 +455,6 @@ extra-build-dependencies = { flash-attn = [{ requirement = "torch", match-runtim
 extra-build-variables = { flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" } }
 
 # ===== Dependency Groups =====
-[dependency-groups]
-contract = ["schemathesis>=3.39.16,<4.0.0"]
-dev = [
-    "pytest>=8.3.5,<9.0.0",
-    "pytest-asyncio>=1.0.0,<2.0.0",
-    "pytest-cov>=6.1.1,<8.0.0",
-    "pytest-mock>=3.14.1,<4.0.0",
-    "coverage>=7.6.0,<8.0.0",
-    "pytest-benchmark>=5.1.0,<6.0.0",
-    "testcontainers>=4.8.1,<5.0.0",
-    "hypothesis>=6.135.0,<7.0.0",
-    "pytest-xdist>=3.7.0,<4.0.0",
-    "mutmut>=2.5.1,<4.0.0",
-    "locust>=2.37.10,<3.0.0",
-    "pyjwt>=2.10.1,<3.0.0",
-    "pyright>=1.1.379,<2.0.0",
-    "pytest-timeout>=2.4.0,<3.0.0",
-    "pytest-env>=1.1.5,<2.0.0",
-]
-docs = [
-    "mkdocs>=1.6.1,<2.0.0",
-    "mkdocs-material>=9.6.20,<10.0.0",
-    "mkdocstrings>=0.30.1,<1.0.0",
-    "mkdocstrings-python>=1.18.2,<2.0.0",
-]
 
 [tool.pylint]
 [tool.pylint.main]
