--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dependencies = [
     "slowapi>=0.1.9,<0.2.0",
     "purgatory-circuitbreaker>=0.7.2,<0.8.0",
     "aiocache>=0.12.3,<0.13.0",
+    "platformdirs>=4.3.8,<5.0.0",
     "click>=8.2.1,<8.2.2",
     "rich>=14.1.0,<15.0.0",
     "colorlog>=6.9.0,<7.0.0",
