--- a/pytest.ini
+++ b/pytest.ini
@@ -17,6 +17,7 @@ filterwarnings =
     error
     ignore:pkg_resources is deprecated as an API.:DeprecationWarning
     ignore:Support for class-based `config` is deprecated:DeprecationWarning
+    ignore:jsonschema\.exceptions\.RefResolutionError is deprecated:DeprecationWarning
     ignore:unclosed event loop:ResourceWarning
     ignore:unclosed <socket\.socket:ResourceWarning
 markers =
