--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -41,6 +41,13 @@ jobs:
           cache-suffix: "-docs"
           install-dev: 'false'
 
+      - name: Install uv if missing
+        run: |
+          if ! command -v uv >/dev/null 2>&1; then
+            curl -LsSf https://astral.sh/uv/install.sh | sh
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
+          fi
+
       - name: Ensure uv is available
         run: uv --version
 
