--- a/pyproject.toml
+++ b/pyproject.toml
@@ -216,6 +216,9 @@ server = [
 all = [
     "ai-docs-vector-db-hybrid-scraper[dev,contract,accessibility,browser,llm,observability,parsing,dataframe,docs,gpu,eval,server]",
 ]
+web = [
+    "tavily-python>=0.7.12",
+]
 
 [project.urls]
 Homepage = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
