--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "pyyaml>=6.0.2,<7.0.0",
     "crawl4ai[all]>=0.7.4,<0.8.0",
     "firecrawl-py>=4.3.6,<5.0.0",
-    "qdrant-client[fastembed]>=1.15.1,<1.15.2",
+    "qdrant-client[fastembed]>=1.15,<2.0",
     "openai>=1.108.1,<2.0.0",
     "fastembed>=0.7.3,<0.7.4",
     "FlagEmbedding>=1.3.5,<2.0.0",
@@ -52,7 +52,6 @@ dependencies = [
     "scipy>=1.16.2,<2.0.0",
     "defusedxml>=0.7.1,<0.8.0",
     "aiohttp>=3.12.15,<4.0.0",
-    "asyncio-throttle>=1.0.2,<2.0.0",
     "aiofiles>=24.1.0,<25.0.0",
     "tenacity>=9.1.2,<10.0.0",
     "mcp>=1.14.1,<2.0.0",
@@ -61,8 +60,6 @@ dependencies = [
     "arq>=0.26.3,<0.27.0",
     "cachetools>=5.5.2,<6.0.0",
     "slowapi>=0.1.9,<0.2.0",
-    "purgatory-circuitbreaker>=0.7.2,<0.8.0",
-    "aiocache>=0.12.3,<0.13.0",
     "platformdirs>=4.3.8,<5.0.0",
     "click>=8.2.1,<8.2.2",
     "rich>=14.1.0,<15.0.0",
@@ -71,11 +68,9 @@ dependencies = [
     "questionary>=2.1.1,<3.0.0",
     "prometheus-client>=0.23.1,<0.24.0",
     "prometheus-fastapi-instrumentator>=7.1.0,<8.0.0",
-    "psutil>=6.1.1,<7.0.0",
     "sqlalchemy>=2.0.43,<3.0.0",
     "tomli-w>=1.2.0,<2.0.0",
     "jsonschema2md>=1.7.0,<2.0.0",
-    "respx>=0.22.0,<0.23.0",
     "watchdog>=6.0.0,<7.0.0",
     "tool>=0.8.0",
     "httpx>=0.28.1,<0.29.0",
@@ -165,7 +160,7 @@ browser = [
 llm = [
     "langchain-anthropic>=0.3.20,<1.0.0",
     "langchain-google-genai>=2.1.12,<3.0.0",
-    "sentence-transformers>=5.1.1",
+    "sentence-transformers>=3,<4",
 ]
 
 # Observability and monitoring
@@ -175,6 +170,7 @@ observability = [
     "opentelemetry-instrumentation-fastapi>=0.58b0,<0.59.0",
     "opentelemetry-exporter-prometheus>=0.58b0,<0.59.0",
     "opentelemetry-instrumentation-starlette>=0.58b0,<0.59.0",
+    "psutil>=6.1.1",
 ]
 
 # Code parsing tools
