--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,12 +114,13 @@ dev = [
     "testcontainers>=4.8.1,<5.0.0",
     "fakeredis>=2.31.3,<3.0.0",
     "coverage>=7.6.0,<8.0.0",
-    "ruff>=0.13.1,<0.14.0",
+    "ruff>=0.13.1,<0.15.0",
     "pylint>=3.3.8,<4.0.0",
     "pyright>=1.1.379,<2.0.0",
     "taskipy>=1.14.1,<2.0.0",
     "locust>=2.37.10,<3.0.0",
     "pyjwt>=2.10.1,<3.0.0",
+    "respx>=0.22.0",
 ]
 
 # Documentation
