--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,6 +89,7 @@ dependencies = [
     "aiolimiter>=1.2.1",
     "trafilatura>=2.0.0",
     "selectolax>=0.4.0",
+    "tiktoken>=0.12.0,<0.13.0",
 ]
 
 
